documented java options to silent mockito warnings on stderr